--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	<!-- GitHub用 -->
 	<link rel="stylesheet" href="/music_site/css/import.css">
 	<link rel="stylesheet" href="/music_site/css/swiper.css">
+	<link rel="stylesheet" href="/music_site/css/port.css">
+
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="/music_site/js/jquery.sliderPro.min.js"></script>
@@ -101,7 +103,7 @@
 
 			<li>
 				<div class="newsDate">2025.02.01</div>
-				<div class="newsTxt"><a href="/music_site/news.html#n20250201">sample 2/01 リリース決定！</a></div>
+				<div class="newsTxt"><a href="/music_site/news.html#n20250201">sample 2/1 リリース決定！</a></div>
 			</li>
 
 			<li>
