--- a/portfolio.html
+++ b/portfolio.html
@@ -12,10 +12,16 @@
 <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Noto+Sans+JP:400,700,900" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.4/css/all.css">
 
-<link rel="stylesheet" type="text/css" href="../css/import.css">
-<link rel="stylesheet" href="./css/port.css">
+<!-- <link rel="stylesheet" type="text/css" href="../css/import.css">
+<link rel="stylesheet" href="./css/port.css"> -->
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<link rel="stylesheet" href="/css/import.css">
+<link rel="stylesheet" href="/css/port.css">
+	
+<!-- GitHub用 -->
+<!-- <link rel="stylesheet" href="/music_site/css/import.css">
+<link rel="stylesheet" href="/music_site/css/port.css"> -->
+
 </head>
 
 <body>
@@ -38,6 +44,5 @@
 			</ul>
 		</div>
 	</div>	
-	<script src="../js/my_query.js"></script>
 </body>
 </html>
