--- a/portfolio.html
+++ b/portfolio.html
@@ -15,12 +15,12 @@
 <!-- <link rel="stylesheet" type="text/css" href="../css/import.css">
 <link rel="stylesheet" href="./css/port.css"> -->
 
-<link rel="stylesheet" href="/css/import.css">
-<link rel="stylesheet" href="/css/port.css">
+<!-- <link rel="stylesheet" href="/css/import.css">
+<link rel="stylesheet" href="/css/port.css"> -->
 	
 <!-- GitHub用 -->
-<!-- <link rel="stylesheet" href="/music_site/css/import.css">
-<link rel="stylesheet" href="/music_site/css/port.css"> -->
+<link rel="stylesheet" href="/music_site/css/import.css">
+<link rel="stylesheet" href="/music_site/css/port.css">
 
 </head>
 
