--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
 		<div class="conTit">
 			<!-- contents start -->
 			<form action="" method="post" name="cont">
-				<p class="contactTxt wow fadeIn">下記よりお気軽にお問い合わせ下さい。内容によっては、返信にお時間をいただくこともございます。</p>
+				<p class="contactTxt wow fadeIn">下記よりお気軽にお問い合わせ下さい。</p>
 				<div class="blockbox wow fadeIn">
 					<dl>
 						<dt>お名前</dt>
